# velo

./: .eslintrc.cjs  .eslintrc.js  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  eslint.config.js  package-lock.json  package.json  turbo.json
.github/: dependabot.yml
contracts/: Cargo.toml
contracts-evm/: HTLC.sol  README.md
contracts/escrow/: Cargo.toml
contracts/escrow/proptest-regressions/: property_test.txt
contracts/escrow/src/: lib.rs  property_test.rs
contracts/soroban-lint/: Cargo.toml  FINDINGS.md
contracts/soroban-lint/src/: main.rs
contracts/soroban-lint/src/checks/: cei_pattern.rs  mod.rs  require_auth.rs  storage_ttl.rs
docs/: DATA_RETENTION.md  RELAYER_CONSENSUS.md  api.md  audit-triage.md  cross-chain-relayer.md  deployment.md  dispute-evidence.md  ed25519-dalek-testutils-bug.md  escrow-anomaly-monitoring.md  fee-bump-research.md  fuzz-testing-recommendation-203.md  grantfox-usdc-payout-tax-research.md  mainnet-deployment.md  mexico-cash-network-partnerships.md  mexico-regulatory-research.md  mobile-verification.md  non-custodial-escrow-flow.md  non-custodial-signing.md  notification-providers-mexico.md  pending-trade-chat-transport.md  protocol-upgrade-policy.md  provider-cold-start.md  provider-location-verification.md  provider-payout-batching.md  qr-scanner-library-evaluation.md  rate-limiting-strategy.md  relayer-architecture.md  request-flow.md  request-tracing.md  rpc-resilience.md  scaling-plan.md  secret-recovery.md  smart-contracts.md  stellar-seps-analysis.md  testnet-deploy-pipeline-204.md  (+4 more)
(+163 files in other folders)
