[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
htlc-core = { path = "../htlc-core" }

[dev-dependencies]
proptest = { version = "1", default-features = false, features = ["std"] }
soroban-sdk = { workspace = true, features = ["testutils"] }
