[package]
name = "soroban-lint"
version = "0.1.0"
edition = "2021"
description = "Soroban-specific static analysis tool for detecting common contract bugs"
license = "Apache-2.0"

[[bin]]
name = "soroban-lint"
path = "src/main.rs"

[dependencies]
syn = { version = "3", features = ["full", "extra-traits", "visit"] }
walkdir = "2"
anyhow = "1"
proc-macro2 = "1"
